# fastapi-mongodb

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  item_repository.py  main.py  mongo_config.py  schemas.py
