[tool.poetry]
name = "fast-api-intro"
version = "0.1.0"
description = ""
authors = ["Sebas <sebastian.ituarte@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_intro"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
motor = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
